# learning_synthesis

./: .gitignore  Cargo.toml  README.md  test.txt
data/: README.md  generated_inputs.txt
docs/: build.sh  index.html
docs/assets/: index-0931d359.js  index-18910d7f.js  index-419e007f.js  index-4a202239.js  index-4a37e56e.css  index-4bacc830.js  index-5211ac13.css  index-5a09541a.js  index-61232f61.js  index-77040fc9.js  index-7f6c91d6.js  index-c5b07879.css  index-c7cac238.js  index-e14fec02.js
docs/pkg/: synthesizer-opt_bg.wasm  synthesizer.d.ts  synthesizer.js  synthesizer_bg.js  synthesizer_bg.wasm
src/: bank.rs  datagen.rs  egg_lang.rs  enumerative.rs  lang.rs  lib.rs  main.rs  test.rs  test_datagen.rs  vsa.rs
src/enumerative/: bottom_up.rs  bottom_up_egg.rs  bottom_up_vsa.rs  combo.rs  search.rs  tdp.rs  top_down.rs  top_down_vsa.rs
vite/: build.sh  index.html  package-lock.json  package.json  vite.config.ts
vite/public/pkg/: synthesizer-opt.js  synthesizer-opt_bg.wasm  synthesizer.js  synthesizer_bg.wasm
vite/src/: App.svelte  lib.ts
vite/src/pkg/: synthesizer-opt.d.ts  synthesizer-opt_bg.js  synthesizer-opt_bg.wasm.d.ts  synthesizer.d.ts  synthesizer_bg.wasm.d.ts
