[package]
name = "synthesizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
egg = "0.9.2"
regex = "1.7.1"
wasm-bindgen = "0.2.84"
js-sys = "0.3.55"
lru = "0.9.0"
lazy_static = "1.4.0"
